[tool.poetry]
name = "loudflow"
version = "0.1.0"
description = "Multi-agent system framework"
authors = ["Sinan Inel <sinan.inel@farsimple.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/farsimple/loudflow"

[tool.poetry.scripts]
main = "loudflow.main:main"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
tcod = "^12.7.2"
Rx = "^3.2.0"
miniKanren = "^1.0.1"
wonderwords = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
mypy = "^0.910"
pre-commit = "^2.13.0"
pytest-cov = "^2.12.1"
tox = "^3.23.1"
mkdocs = "^1.2.1"
mkdocs-material-extensions = "^1.0.1"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocstrings = "^0.15.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
balanced_wrapping = true
order_by_type = true
use_parentheses = true
force_sort_within_sections = true
reverse_relative = true
known_first_party = "loudflow"
src_paths = ["src", "tests"]

[tool.mypy]
files = ["src"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
python_files = "*_test.py"
python_functions = "test_*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
